// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page Clicking portfolio switch shows empty portfolio 1`] = `
<div>
  <div
    class="MuiContainer-root makeStyles-landingContainer-38 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-center"
    >
      <div
        class="MuiGrid-root makeStyles-headerContainer-39 MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="makeStyles-headerContainer-48"
        >
          <div
            class="makeStyles-headerContent-49"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 MuiTypography-colorTextPrimary"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-47"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiOutlinedInput-colorSecondary makeStyles-gasSelector-50 MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-51 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-52"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-walletButton-58 MuiButton-containedSecondary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="makeStyles-walletDot-55 makeStyles-greenDot-57"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root makeStyles-widgetContainer-42 MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div>
          <label
            class="MuiFormControlLabel-root makeStyles-walletSlider-59"
          >
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-60 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-61 Mui-checked"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-63 MuiSwitch-input"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-46"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root makeStyles-samplePicker-64"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-51 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-52"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root makeStyles-currencyPicker-65"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-51 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-52"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-66 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-66 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-66 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-settListContainer-74"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
        style="margin: 2rem 0px;"
      >
        Your address does not have tokens to deposit.
      </h6>
      <div />
    </div>
  </div>
</div>
`;

exports[`Landing Page Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root makeStyles-landingContainer-1 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-center"
    >
      <div
        class="MuiGrid-root makeStyles-headerContainer-2 MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="makeStyles-headerContainer-11"
        >
          <div
            class="makeStyles-headerContent-12"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 MuiTypography-colorTextPrimary"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-10"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiOutlinedInput-colorSecondary makeStyles-gasSelector-13 MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-14 MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-15"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-walletButton-21 MuiButton-containedSecondary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="makeStyles-walletDot-18 makeStyles-greenDot-20"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root makeStyles-widgetContainer-5 MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div>
          <label
            class="MuiFormControlLabel-root makeStyles-walletSlider-22"
          >
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-23 MuiSwitch-switchBase MuiSwitch-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-26 MuiSwitch-input"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-9"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root makeStyles-samplePicker-27"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-14 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-15"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root makeStyles-currencyPicker-28"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-14 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-15"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-29 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-29 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
      >
        <div
          class="MuiPaper-root makeStyles-infoPaper-29 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-wave"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-settListContainer-37"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
        style="margin: 2rem 0px;"
      >
        Loading Badger Setts...
      </h6>
      <div />
    </div>
  </div>
</div>
`;
